--- a/source/form.html
+++ b/source/form.html
@@ -6,53 +6,46 @@
   </head>
   <body>
 
-    <header class="inner-page-header">
-      <div class="page-header__logo-wrapper logo">
-        <a class="logo__link" href="index.html">
+    <header class="page-header">
+        <a class=" page-header__logo logo  logo__link" href="index.html">
           <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
         </a>
-      </div>
       <nav class="main-nav menu">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
-          <div class="main-nav__logo-wrapper logo">
-            <a class="main-nav__logo-link logo__link" href="index.html">
-              <img class="main-nav__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
-            </a>
-          </div>
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a class="link__info" href="#">О сервисе</a>
+              <a class="site-list__link" href="#">О сервисе</a>
             </li>
             <li class="site-list__item">
-              <a class="link__form" href="form.html">Направления</a>
+              <a class="site-list__link" href="form.html">Направления</a>
             </li>
             <li class="site-list__item">
-              <a class="link__catalog" href="catalog.html">Попутчики</a>
+              <a class="site-list__link" href="catalog.html">Попутчики</a>
             </li>
           </ul>
-          <a class="link__login auth-button" href="#">Авторизоваться</a>
-        </div>
-        <div class="contacts__links">
-          <a class="contacts__phone" href="tel:+78005558628">
-            <span class="contacts__phone--mobile">8 800 555-86-28</span>
-          </a>
-          <a class="contacts__email" href="mailto:mail@htmlacademy.ru">
-            <span class="contacts__email--email">mail@htmlacademy.ru</span>
-          </a>
-        </div>
-        <div class="page-header__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-            </li>
-          </ul>
+          <a class="menu__link-login auth-button" href="#">Авторизоваться</a>
+          <div class="contacts">
+            <a class="contacts__item contacts__item--phone" href="tel:+78005558628">
+              <span class="contacts__content">8 800 555-86-28</span>
+            </a>
+            <a class="contacts__item contacts__item--email" href="mailto:mail@htmlacademy.ru">
+              <span class="contacts__content">mail@htmlacademy.ru</span>
+            </a>
+          </div>
+          <div class="page-header__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
@@ -63,11 +56,9 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-fooger__logo-wrapper logo">
-        <a class="logo__link" href="index.html">
-          <img class="page-footer__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
+        <a class="page-footer__logo logo" href="index.html">
+          <img class="logo__img logo__img--footer" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
         </a>
-      </div>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
