--- a/source/index.html
+++ b/source/index.html
@@ -6,12 +6,13 @@
   </head>
   <body>
 
-  <header class="page-header">
-        <a class=" page-header__logo logo  logo__link">
-          <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
-        </a>
+    <header class="page-header">
+      <a class=" page-header__logo logo  logo__link">
+        <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
+      </a>
       <nav class="main-nav menu">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
               <a class="site-list__link" href="#">О сервисе</a>
@@ -24,27 +25,27 @@
             </li>
           </ul>
           <a class="menu__link-login auth-button" href="#">Авторизоваться</a>
-        </div>
-        <div class="contacts">
-          <a class="contacts__item contacts__item--phone" href="tel:+78005558628">
-            <span class="contacts__content">8 800 555-86-28</span>
-          </a>
-          <a class="contacts__item contacts__item--email" href="mailto:mail@htmlacademy.ru">
-            <span class="contacts__content">mail@htmlacademy.ru</span>
-          </a>
-        </div>
-        <div class="page-header__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-            </li>
-          </ul>
+          <div class="contacts">
+            <a class="contacts__item contacts__item--phone" href="tel:+78005558628">
+              <span class="contacts__content">8 800 555-86-28</span>
+            </a>
+            <a class="contacts__item contacts__item--email" href="mailto:mail@htmlacademy.ru">
+              <span class="contacts__content">mail@htmlacademy.ru</span>
+            </a>
+          </div>
+          <div class="page-header__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
@@ -245,7 +246,7 @@
           <img class="logo__img logo__img--footer" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
         </a>
       <div class="page-footer__social social">
-        <ul class="social__list">s
+        <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
           </li>
