Исправила название заголовков на внутренних страницах

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,7 +51,7 @@
     </header>
 
     <main class="inner-page">
-      <h1 class="inner-title companions">Попутчики</h1>
+      <h1 class="inner-page__title">Попутчики</h1>
 
       <section class="companions-filter">
         <h2 class="companions-filter__title">Подберите идеального попутчика</h2>
