--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
     </header>
 
     <main>
-      <h1 class="inner-title form">Напрвления</h1>
+      <h1 class="inner-page__title">Направления</h1>
       <!-- здесь будут секции с фильтрами -->
     </main>
 
