--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
 
-    <header class="page-header">
+    <header class="page-header container">
       <a class=" page-header__logo logo  logo__link">
-        <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
+        <img class="page-header__logo-image logo__img" src="img/logo-mobile-white@1x.png" width="100" height="19" alt="логотип сервиса Погнали">
       </a>
       <nav class="main-nav menu">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
