Адаптивноость блоков главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -174,8 +174,8 @@
             <div class="popular-route__wrapper">
               <h3 class="popular-route__item-title">Тайланд
                 <span class="popular-route__item-subscribers">18321</span>
+                <p class="popular-route__item-description">Джунгли зовут!</p>
               </h3>
-              <p class="popular-route__item-description">Джунгли зовут!</p>
             </div>
           </li>
           <li class="popular-route__item popular-route__item--france">
@@ -183,8 +183,8 @@
             <div class="popular-route__wrapper">
               <h3 class="popular-route__item-title">Франция
                 <span class="popular-route__item-subscribers">12518</span>
+                <p class="popular-route__item-description">Трэ бьен, манифик!</p>
               </h3>
-              <p class="popular-route__item-description">Трэ бьен, манифик!</p>
             </div>
           </li>
           <li class="popular-route__item popular-route__item--czech">
@@ -192,8 +192,8 @@
             <div class="popular-route__wrapper">
               <h3 class="popular-route__item-title">Чехия
                 <span class="popular-route__item-subscribers">5326</span>
+                <p class="popular-route__item-description">Закоулки старой Европы</p>
               </h3>
-              <p class="popular-route__item-description">Закоулки старой Европы</p>
             </div>
           </li>
         </ul>
@@ -206,7 +206,7 @@
           Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, а другому маршрут для хайкинга.
         </p>
         <p class="companions__text companions__text--bold text-bold">
-          Теперь можно легко найти единомышленников!
+          Теперь можно легко<br class="companions__text--br"> найти единомышленников!
         </p>
         <ul class="companions__list">
           <li class="companions__item companions__item">
@@ -324,7 +324,7 @@
       </section>
 
       <section class="tariffs  container">
-        <h2 class="tariffs__title">Добавьте свой профиль</h2>
+        <h2 class="tariffs__title">Добавьте свой профиль<span class="tariffs__title--exclamation">!</span></h2>
         <table class="tariffs__list">
           <tr class="tariffs__item">
             <td class="tariffs__field text-light">Базовое размещение</td>
@@ -369,12 +369,12 @@
       </section> -->
       <section class="contacts-us  container">
         <h2 class="contacts-us__title">Заинтересовались?</h2>
-        <p class="contacts-us__text text-light">Зарегистрируйтесь,<br> это быстро и бесплатно!<br>Уже зарегистрированы? Тогда<br> скорее <a class="contacts-us__auth" href="#">авторизуйтесь</a>.</p>
+        <p class="contacts-us__text text-light">Зарегистрируйтесь,<br class="contacts-us__text--br"> это быстро и бесплатно!<br> Уже зарегистрированы? Тогда<br class="contacts-us__text--br"> скорее <a class="contacts-us__auth" href="#">авторизуйтесь</a>.</p>
         <form class="contacts-us__login" action="https://echo.htmlacademy.ru" method="post">
           <input class="contacts-us__email" type="email" name="user-email" value="E-mail">
-          <a class="contacts-us__button button-auth" href="#">Переход к авторизации</a>
+          <a class="contacts-us__button button-auth" href="#">Регистрация</a>
         </form>
-        <p class="contacts-us__text text-light">Остались вопросы?<br> Мы с радостью на них ответим!</p>
+        <p class="contacts-us__text text-light">Остались вопросы?<br class="contacts-us__text--br"> Мы с радостью на них ответим!</p>
         <div class="contacts-us__links contacts">
           <a class="contacts__item contacts__item--phone" href="tel:+78005558628">
               <span class="contacts__content">8 800 555-86-28</span>
