--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class=" page-header__logo logo  logo__link  container">
+      <a class=" page-header__logo logo  logo__link  container" href="index.html">
         <img class="page-header__logo-image logo__img" src="img/logo-mobile-white@1x.png" width="96" height="15" alt="логотип сервиса Погнали">
       </a>
       <nav class="main-nav menu  container">
